Add DuckDB data layer, API v2 routers, and new atlas support (Round 3.5/4)
Migrate data architecture from JSON/Parquet/SQLite/PostgreSQL to DuckDB
(science data) + SQLite (app state). Add API v2 unified atlas endpoints
with interactive single-cell query support. Register NicheFormer, scGPT,
and cellxgene atlases with placeholder pipelines and SLURM scripts.

Key changes:
- DuckDB conversion script (38 tables, chunked loading, auto-discovery)
- DuckDB repository (read-only, parameterized queries, SQL injection safe)
- SQLite default backend for app state via aiosqlite with WAL mode
- API v2 routers: /api/v2/atlases/{atlas}/*, /api/v2/validation/*
- Celery tasks upgraded with RidgeInference + DuckDB output
- Pipeline router with actual SLURM/Celery execution
- 6 new SLURM scripts for Round 3.5 tasks and new atlases
- CLAUDE.md updated: 226 endpoints, 15 routers, DuckDB migration plan

--- a/cytoatlas-api/static/index.html
+++ b/cytoatlas-api/static/index.html
@@ -232,34 +232,39 @@
         <div class="page validate-page">
             <div class="page-header">
                 <h1>Activity Validation</h1>
-                <p>Validation of activity predictions by correlating inferred scores with signature gene expression</p>
+                <p>Validation of activity predictions by correlating inferred scores with signature gene expression across multiple aggregation levels</p>
             </div>
 
             <div class="filter-bar top-controls">
                 <label>Atlas:
                     <select id="val-atlas">
-                        <option value="cima">CIMA</option>
-                        <option value="inflammation">Inflammation</option>
-                        <option value="scatlas">scAtlas</option>
+                        <option value="cima">CIMA (6.5M cells)</option>
+                        <option value="inflammation_main">Inflammation Main (4.9M)</option>
+                        <option value="inflammation_val">Inflammation Val</option>
+                        <option value="inflammation_ext">Inflammation Ext</option>
+                        <option value="scatlas_normal">scAtlas Normal (6.4M)</option>
+                        <option value="scatlas_cancer">scAtlas Cancer (6.4M)</option>
                     </select>
                 </label>
                 <label>Signature Type:
                     <select id="val-sigtype">
-                        <option value="CytoSig">CytoSig (43)</option>
-                        <option value="SecAct">SecAct (1,170)</option>
+                        <option value="cytosig">CytoSig (43)</option>
+                        <option value="lincytosig">LinCytoSig</option>
+                        <option value="secact">SecAct (1,249)</option>
                     </select>
                 </label>
             </div>
 
             <div class="tab-navigation" id="validation-tabs">
-                <button class="tab-btn active" data-tab="atlas-level">Atlas Level</button>
-                <button class="tab-btn" data-tab="pseudobulk">Pseudobulk Level</button>
-                <button class="tab-btn" data-tab="singlecell">Single-Cell Level</button>
-                <button class="tab-btn" data-tab="summary">Summary</button>
+                <button class="tab-btn active" data-tab="summary">Summary</button>
+                <button class="tab-btn" data-tab="bulk-rnaseq">Bulk RNA-seq</button>
+                <button class="tab-btn" data-tab="donor-level">Donor Level</button>
+                <button class="tab-btn" data-tab="celltype-level">Cell Type Level</button>
+                <button class="tab-btn" data-tab="singlecell">Single-Cell</button>
             </div>
 
             <div class="validation-content" id="validation-content">
-                <!-- Tab content will be loaded dynamically -->
+                <!-- Tab content will be loaded dynamically by validate.js -->
             </div>
         </div>
     </template>
